Run se typogrify

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,7 +23,7 @@
 					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Mark of the Beast</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: A Woman's Face</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: A Woman’s Face</a>
 				</li>
 				<li>
 					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Vera Rayne</a>
@@ -68,7 +68,7 @@
 					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: After Many Years</a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Carlotta's Story</a>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Carlotta’s Story</a>
 				</li>
 				<li>
 					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Valdo in a New Light</a>
@@ -95,7 +95,7 @@
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Flight!</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Vera's Warning</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Vera’s Warning</a>
 				</li>
 				<li>
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Message</a>
@@ -146,10 +146,10 @@
 					<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: The Story of a Crime</a>
 				</li>
 				<li>
-					<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: Count Flavio's Diary</a>
+					<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: Count Flavio’s Diary</a>
 				</li>
 				<li>
-					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: A Woman's Heart</a>
+					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: A Woman’s Heart</a>
 				</li>
 				<li>
 					<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: The Passing of the Vengeance</a>
