--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/midnightguestad00whitgoog">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">A Girl's Head II</i>,<br/>
+			<i epub:type="se:name.visual-art.painting">A Girl’s Head II</i>,<br/>
 			a painting by<br/>
 			<a href="https://en.wikipedia.org/wiki/Olof_Sager-Nelson">Olof Sager-Nelson</a>.<br/>
 			The cover and title pages feature the<br/>
