--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<b epub:type="z3998:personal-name">Lam Le</b><br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b epub:type="z3998:personal-name">Charles Bowen</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Charles Bowen</b> and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/56960">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
